# OGG-Vorbis-CMAKE

./: CMakeLists.txt  shell.nix
libogg/: CMakeLists.txt
libvorbis/: CMakeLists.txt
